[workspace]

members = ["client"]


[package]
name = "delayed-message"
version = "0.1.0"
edition = "2021"

[dependencies]
delayed-message-app = { path = "app" }

[build-dependencies]
delayed-message-app = { path = "app" }
sails-rs = { version = "0.4.0", features = ["wasm-builder"] }
sails-idl-gen = "0.4.0"

[dev-dependencies]
delayed-message = { path = ".", features = ["wasm-binary"] }
delayed-message-client = { path = "client" }
sails-rs = { version = "0.4.0", features = ["gtest"] }
tokio = { version = "1.39", features = ["rt", "macros"] }

[features]
wasm-binary = []
